# Logger

./: .gitignore  Makefile  README.md
c_api/: loger.c  loger.h
c_src/: README.md  logger.c  logger.h
cpp_api/: loger.cpp  loger.hpp  logger.cpp  logger.hpp
cpp_src/: CMakeLists.txt  README.md  logger.cpp  logger.hpp
